Solved Overlapping problem

--- a/style.css
+++ b/style.css
@@ -102,4 +102,6 @@
 }
 .single-dialog{
     margin-left: 3%;
+    margin-top: 5%;
+    margin-right: 3%;
 }
